fixed box-shadow being cut off on categories (home page)

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -73,6 +73,7 @@
         white-space: nowrap;
         font-size: 1rem;
         text-decoration: none;
+        margin-bottom: 2px; /* same as box-shadow */
 
         &:hover:not(.selected) {
           background-color: rgba($main-color, 0.2);
